syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";

message AddDenominationRequest {
    string name = 1;
}

message AddDenominationResponse {
    string message = 1;
    bool success = 2;
}

// A message for Denomination data
message Denomination {
  int32 id = 1;
  string name = 2;
}

message GetDenominationRequest {}

message GetDenominationResponse {
  repeated Denomination denominations = 1;
}
